<resources>
    <string-array name="time_type_array">
        <item>min</item>
        <item>hrs</item>
    </string-array>
    <string name="app_tag">T-Conecta</string>
    <string name="app_name">T-Conecta</string>
    <string name="action_settings">Settings</string>
    <string name="file_provider_authority" translatable="false">com.blm.qiuboplus.fileprovider</string>
    <string name="transfer">trade</string>
    <string name="cancel_transfer">cancel trade</string>
    <string name="app_1">app 1</string>
    <string name="text_login_3">Escribe tu usuario y contraseña\npara acceder a tu cuenta</string>
    <string name="text_personal_1">Información <b>Personal</b></string>
    <string name="text_personal_2">¿Ya tienes una cuenta?</string>
    <string name="text_personal_3">¿Está recibiendo ayuda de un promotor?</string>
    <string name="text_personal_4">Accede</string>
    <string name="text_continue">Continuar</string>
    <string name="draw_sign">Dibuja tu firma</string>
    <string name="clear_sign">Borrar</string>
    <string name="text_terms_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="text_accept">Aceptar</string>
    <string name="text_cancel">Cancelar</string>
    <string name="txt_num_cuenta">Cuenta bancaria</string>
    <string name="text_contrasenia">IMPORTANTE: Su contraseña deberá contener una longitud mínima de 8 caracteres, incluyendo al menos 1 mayúscula, 1 minúscula y 1 número. Sin caracteres especiales.</string>
    <string name="text_tipo_cuenta"> Número celular </string>
    <string name="text_enviar_codigo">Se enviará un código de activación\nal número celular</string>
    <string name="text_vincular">Es necesario que vincule un dispositivo.\n\nPara contiunar seleccione el dispositivo:</string>
    <string name="desea_continuar">\n¿desea continuar?</string>
    <string name="desea_cancelar">¿Está seguro de cancelar la\ntransacción por </string>
    <string name="alert_message_register_financial_question">Actualmente no cuenta\ncon aceptación de tarjetas.\n\n¿Desea registrarte en este momento?\n</string>
    <string name="text_rewards_1">Comienza a facturar\ny recibe $100 MXN</string>
    <string name="error_field_size_bank_account">El tamaño del número de cuenta debe ser entre 10 y 18 dígitos.</string>
    <string name="error_field_size_curp">El tamaño del curp debe ser de 18 caracteres.</string>
    <string name="error_field_size_rfc">El tamaño del curp debe ser de 13 caracteres.</string>
    <string name="error_field_size_13">El valor debe ser de 13 dígitos.</string>
    <string name="alert_message_close_app">¿Desea cerrar la aplicación?</string>
    <string name="default_notification_channel_id" translatable="false">1234567890</string>
    <string name="default_notification_channel_name" translatable="true">com.bimbo.conecta</string>
    <string name="general_error">Se perdió la conexión a internet.</string>
    <string name="general_error_browser">Falla de conexión, presione aceptar</string>
    <string name="general_error_internet">Error de Conexión, verifique su reporte para conocer el estado de su transacción.</string>
    <string name="general_error_catch">Error desconocido al procesar su petición.</string>
    <string name="general_error_transaction">Ocurrió un error en la entrega de respuesta. Verifica en Reportes si la transacción fue aprobada antes de reintentar el pago.</string>
    <string name="general_error_url">No puede acceder a la URL</string>
    <string name="message_logout_question">¿Está seguro de cerrar la sesión?</string>
    <string name="message_logout">Ha iniciado sesión en otro dispositivo.</string>
    <string name="message_logout_swap">Proceso completado, se va a cerrar la sesión</string>
    <string name="alert_message_register_user_success">Usuario registrado con éxito, en breve le llegará un correo electrónico para confirmar la cuenta.</string>
    <string name="alert_message_success_register_user_information">Información almacenada con éxito.</string>
    <string name="alert_message_success_register_all_information">Su registro financiero fue dado de alta con éxito. En un plazo de 24 horas su cuenta podrá ser activada para realizar cobros.</string>
    <string name="alert_message_success_register_all_information_mit">¡YA ESTAS LISTO PARA ACEPTAR TARJETAS!</string>
    <string name="alert_message_success_complete_registration">Registro completado con éxito.</string>
    <string name="alert_message_register_user_cancel_question">¿Está seguro de cancelar el registro de nuevo usuario?</string>
    <string name="alert_message_register_dongle_question">No cuenta con un lector de tarjetas emparejado.\n\n¿Desea configurar su lector de tarjetas ahora?</string>
    <string name="alert_message_finalize_register_question">No ha finalizado su registro inicial.\n\n¿Desea finalizarlo ahora?</string>
    <string name="alert_message_register_info_cancel_question">¿Está seguro de cancelar la carga de la información?</string>
    <string name="error_general_evo">Lo sentimos, no podemos procesar tu solicitud. Inténtalo de nuevo más tarde.</string>
    <string name="error_general_evo_cancel_3ds">Lo sentimos, no podemos procesar tu solicitud. Fallo la autenticación 3DS.</string>
    <string name="text_title_11">Abono a mi\n<b>cuenta</b></string>
    <string name="accept_button">Aceptar</string>
    <string name="cancel_button">Cancelar</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="register_button">Registrarme</string>
    <string name="logout_button">Cerrar Sesión</string>
    <string name="agreed_button">Entendido</string>
    <string name="info_button">Más Información</string>
    <string name="account_fragment_tab">Mi Cuenta</string>
    <string name="promotion_fragment_tab">Promociones</string>
    <string name="vw_fragment_tab">Precios de Servicio</string>
    <string name="schedule_fragment_tab">Agendar</string>
    <string name="continue_button">Aceptar</string>
    <string name="sell_fragment_tab">Venta con tarjeta</string>
    <string name="deposit_fragment_tab">Depósitos</string>
    <string name="configuration_fragment_tab">Configuración</string>
    <string name="tae_fragment_tab">Recargas</string>
    <string name="services_fragment_tab">Pago de servicios</string>
    <string name="fragment_title_1">Tiempo Aire</string>
    <string name="fragment_title_2">Pago De Servicios</string>
    <string name="fragment_title_3">Venta</string>
    <string name="fragment_title_4">Pagos Móviles</string>
    <string name="fragment_title_5">Depósitos</string>
    <string name="fragment_title_6">Ayuda</string>
    <string name="fragment_title_7">Soporte y Configuración</string>
    <string name="fragment_title_8">Mi Negocio</string>
    <string name="fragment_title_9">Conecta Provee</string>
    <string name="continue_button_text">Continuar</string>
    <string name="self_register_title">Registro de nuevo usuario</string>
    <string name="pin_access_title">PIN DE ACCESO</string>
    <string name="placeholderParameterName">Nombre(s)</string>
    <string name="placeholderParameterFirstName">Apellido paterno</string>
    <string name="placeholderParameterLastName">Apellido materno</string>
    <string name="placeholderParameterCellPhoneNumber">Número celular (10 dígitos)</string>
    <string name="placeholderParameterMail">Correo electrónico (usuario de acceso)</string>
    <string name="placeholderParameterPassword1">Contraseña</string>
    <string name="placeholderParameterPassword2">Confirme la contraseña.</string>
    <string name="parameter5">Introduce parámetro 5</string>
    <string name="parameter6">Introduce parámetro 6</string>
    <string name="parameter7">Introduce parámetro 7</string>
    <string name="parameter8">Introduce parámetro 8</string>
    <string name="parameter9">Introduce parámetro 9</string>
    <string name="parameter10">Introduce parámetro 10</string>
    <string name="parameter11">Introduce parámetro 11</string>
    <string name="parameter12">Introduce parámetro 12</string>
    <string name="select_carrier">Selecciona un operador</string>
    <string name="error_invalid_password_confirm">Las contraseñas no coinciden.</string>
    <string name="error_invalid_password">Contraseña inválida.</string>
    <string name="error_invalid_email">Correo electrónico inválido</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="btn_clear">Limpiar</string>
    <string name="btn_backspace">Borrar</string>
    <string name="sell_button">Pagar</string>
    <string name="b9">9</string>
    <string name="b8">8</string>
    <string name="b7">7</string>
    <string name="b6">6</string>
    <string name="b5">5</string>
    <string name="b4">4</string>
    <string name="b3">3</string>
    <string name="b2">2</string>
    <string name="b1">1</string>
    <string name="b0">0</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="ce">ce</string>
    <string name="equals">=</string>
    <string name="menu_login">Login</string>
    <string name="menu_recover">Recover password</string>
    <string name="menu_register_option">Register option</string>
    <string name="menu_pin">Access PIN</string>
    <string name="menu_register">Register</string>
    <string name="menu_notification">Notification</string>
    <string name="orders_title">Pedidos de mis clientes</string>
    <string name="order_increase_sales">Aumenta tus ventas a través de</string>
    <string name="order_receive_orders">Recibe los pedidos de tus clientes y verifíca el pedido a través de T-Conecta</string>
    <string name="order_multiply_sales">¡Multiplica tus ventas!</string>
    <string name="order_activate_sales">Activar pedidos</string>
    <string name="order_client_name">Nombre del cliente</string>
    <string name="order_deliver_orders_activated">El envío de pedidos está activado</string>
    <string name="order_slopes">PENDIENTES</string>
    <string name="order_delivered_orders">ENTREGADOS</string>
    <string name="order_search">Buscar</string>
    <string name="order_you_have_new_order">Tienes un nuevo pedido</string>
    <string name="order_data_request">Estos son los datos de la solicitud</string>
    <string name="order_date_hour">Fecha y hora de la solicitud</string>
    <string name="order_details_for_order">Ver detalles de pedido</string>
    <string name="order_reject_order_to_send">Rechazar pedido</string>
</resources>