<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.orders.ActivateMyOrdersFragment"
    android:background="@drawable/activate_orders_shape"
    android:padding="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:padding="15dp"
        android:background="@drawable/edittext_shape"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:src="@drawable/illustrations_mis_compras_56_x_56" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/order_increase_sales"
            android:textColor="@color/my_orders_black"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/orders_title"
            android:textColor="@color/my_orders_black"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/order_receive_orders"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/tvContent2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:gravity="center_horizontal"
            android:text="@string/order_multiply_sales"
            android:textSize="16dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnActivateOrders"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/button_blue_shape"
            android:text="@string/order_activate_sales"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>
