<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.orders.ActivateMyOrdersFragment"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginRight="5dp"
        android:gravity="right">

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="10dp"
            android:src="@drawable/close_24_px" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnOrderDetails"
        android:layout_below="@+id/rlClose"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/new_order_shape"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:src="@drawable/illustrations_mis_compras_56_x_56" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/order_you_have_new_order"
            android:textColor="@color/my_orders_black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDataTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/order_data_request"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvClientNameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_horizontal"
            android:text="@string/order_client_name"
            android:textColor="@color/FC_blue_5"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvClientName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvDateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_horizontal"
            android:text="@string/order_date_hour"
            android:textColor="@color/FC_blue_5"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:gravity="center_horizontal"
            android:textSize="16dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnOrderDetails"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_above="@+id/btnRejectOrder"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_blue_shape"
        android:text="@string/order_details_for_order"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnRejectOrder"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_button_blue_enabled"
        android:text="@string/order_reject_order_to_send"/>

</RelativeLayout>
