<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/white"
    android:padding="15dp"
    android:orientation="vertical">

    <Switch
        android:id="@+id/swOrdersActivation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:text="@string/order_deliver_orders_activated" />

    <LinearLayout
        android:id="@+id/llTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llPending"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPending"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:gravity="center"
                android:text="@string/order_slopes"
                android:textStyle="bold" />

            <View
                android:id="@+id/vPending"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/FC_blue_1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDelivered"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDelivered"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:gravity="center"
                android:text="@string/order_delivered_orders"
                android:textStyle="bold" />

            <View
                android:id="@+id/vDelivered"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/FC_blue_1" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/button_shape_deliver_stroke"
            android:hint="@string/order_search"
            android:inputType="phone"
            android:digits="0123456789"
            android:paddingLeft="60dp" />

        <RelativeLayout
            android:id="@+id/rlSearch"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/ivSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_blue_search" />

        </RelativeLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOrders"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
